--- a/README
+++ b/README
@@ -1,19 +1,5 @@
 bus1 - UEFI Boot Manager
 
-bootx64.efi: Boot Manager
-        - searches EFI binaries in (ESP)/EFI/org.bus1/*.efi
-        - decrements the loader boot counter before executing the loader
-        - executes the latest release version (versionsort)
-        - if a key is pressed during bootup, a menu is drawn showing all found
-          binaries
-        - built-in command line editor
-        - built-in Windows and OS X boot loader detection
-
-stubx64.efi: Boot Code Stub
-        - executes the embedded PE-sections which contain the kernel, initrd,
-          kernel cmdline, release string
-        - shows the splash screen from the embedded PE section
-
 DETAILS:
         https://github.com/org.bus1/boot-efi
 
@@ -30,3 +16,18 @@ GITWEB:
 LICENSE:
         LGPLv2.1+ (LICENSE.LGPL2.1)
         See COPYING for details.
+
+ABOUT:
+        bootx64.efi: Boot Manager
+        - searches EFI binaries in (ESP)/EFI/org.bus1/*.efi
+        - decrements the loader boot counter before executing the loader
+        - executes the latest release version (versionsort)
+        - if a key is pressed during bootup, a menu is drawn showing all found
+          binaries
+        - built-in command line editor
+        - built-in Windows and OS X boot loader detection
+
+        stubx64.efi: Boot Code Stub
+        - executes the embedded PE-sections which contain the kernel, initrd,
+          kernel cmdline, release string
+        - shows the splash screen from the embedded PE section
